# AgeKeeper-Spies

./: .gitignore  MANIFEST.in  README.md  __init__.py  audio.py  avatar.py  cli.py  player_test.py  pyproject.toml  spies.py  task_registration.py  toast_queue.py  watchlist.py
.github/workflows/: ci.yml
gui/: hello_world_quick.py
gui/QT-Quick/: CMakeLists.txt  main.cpp
spies/: spies.py
