[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agekeeper-spies"
version = "0.1.0"
description = "AgeKeeper spies watcher runtime"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "windows-toasts>=1.3.0",
  "agekeeper @ git+https://github.com/DiscantX/AgeKeeper.git@main",
]

[project.scripts]
agekeeper-spies = "spies.spies:main"

[tool.setuptools]
packages = ["spies"]
include-package-data = true

[tool.setuptools.package-data]
spies = ["assets/*"]
